--- a/app/views/filmes/show.html.erb
+++ b/app/views/filmes/show.html.erb
@@ -35,7 +35,7 @@
             </table>
             <br>
             <%= link_to "Escrever Review", new_filme_review_path(@filme) %> <!--Esse caminho está la no rake routes. colocar o path no final para
-                                                                        saber q é um link-->
+                                                                        saber q é um link passando o pŕoprio filme como parâmetro-->
           </div>
         </div>
       </div>
