--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
           <input type="text" class="form-control" placeholder="Buscar">
         </div>
         <button type="submit" class="btn btn-default">Buscar</button>
-      </form>-->
+      </form> Most of this needs some sort of review...Remake some specifications...-->
           <!--Outros controles interessantes de uma Navbar como por exemplo o DropDown Menu-->
           <!--<ul class="nav navbar-nav navbar-right">
             <li><a href="#">Link</a></li>
